Fix spacing issue filter list

--- a/src/app/components/fields/filter-list.component.css
+++ b/src/app/components/fields/filter-list.component.css
@@ -5,6 +5,7 @@
   border: 1px solid #5bc0de;
   border-top: 0;
   border-radius: 3px;
+  padding-bottom: 1px;
 }
 li {
   cursor:pointer;
